--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/employee-schema
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
+logging.file.name=logs/EmployeeApp.log
+logging.pattern.rolling-file-name=MyApp-%d{yyyy-MM-dd}.%i.log
+logging.file.max-size=1MB
+logging.file.total-size-cap=10MB
+logging.file.max-history=5
+logging.file.clean-history-on-start=true
